--- a/css/dessert.css
+++ b/css/dessert.css
@@ -24,3 +24,9 @@
   .dessert_img:hover {
     transform: scale(0.98);
   }
+
+ .card_dessert {
+   display: flex ;
+   flex-direction: column;
+   align-items: stretch; 
+  }
