--- a/css/pizza.css
+++ b/css/pizza.css
@@ -19,4 +19,9 @@
   transform: scale(0.98);
 }
 
+.card_pizza {
+  display: flex ;
+  flex-direction: column;
+  align-items: stretch; 
+ }
 
