--- a/css/snacks.css
+++ b/css/snacks.css
@@ -24,3 +24,9 @@
   .snacks_img:hover {
     transform: scale(0.98);
   }
+
+  .card_snacks {
+    display: flex ;
+    flex-direction: column;
+    align-items: stretch; 
+   }
